--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,28 @@
-// Начните писать стили здесь
+// blocks
+@import "./blocks/main-header.less";
+@import "./blocks/social.less";
+@import "./blocks/main-footer.less";
+@import "./blocks/copyright.less";
+@import "./blocks/button.less";
+@import "./blocks/site-list.less";
+
+//index
+@import "./blocks/index/advantages.less";
+@import "./blocks/index/index-container.less";
+@import "./blocks/index/subscription.less";
+@import "./blocks/index/main-page.less";
+
+//catalog
+@import "./blocks/catalog/cards.less";
+@import "./blocks/catalog/catalog-container.less";
+@import "./blocks/catalog/video.less";
+
+//form
+@import "./blocks/form/form-container.less";
+@import "./blocks/form/form.less";
+@import "./blocks/form/reviews.less";
+
+//global
+@import "./global/fonts.less";
+@import "./global/variables.less";
+@import "./global/page.less";
