--- a/source/less/blocks/index/main-page.less
+++ b/source/less/blocks/index/main-page.less
@@ -1,30 +1,14 @@
 .main-page {
-  width: 282px;
-  margin: 0 auto;
+  width: 100%;
+  margin-bottom: 32px;
   background-color: #000000;
-  background-image: url("/source/img/back-mobile.jpg@2x.jpg");
+  background-image: url("/source/img/back-mobile.jpg.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
 
 .main-page__text-image {
   margin: 0 auto;
-  width: 282px;
-  height: 214px;
+  padding: 90px 0 85px 0;
 }
 
-@media (min-width: @tablet-width) {
-  .main-page {
-    width: 768px;
-    background-image: url("/source/img/back-mobile.jpg.jpg");
-}
-  .main-page__text-image {
-    width: 461px;
-    height: 350px;
-  }
-}
-
-@media (min-width: @desktop-width) {
-  .main-page {
-    width: 1200px;
-    background-image: url("/source/img/back-desktop.jpg");
-}
-}
