--- a/source/less/blocks/main-header.less
+++ b/source/less/blocks/main-header.less
@@ -1,37 +1,38 @@
 .main-header {
-  margin: 0 auto;
-  padding: 0;
   display: flex;
   flex-direction: column;
 }
 
 .main-header__logo {
   height: 96px;
-  margin: 0 auto;
+  padding-left: 68px;
+  padding-right: 67px;
 }
 
 @media (min-width: @tablet-width) {
-  .main-navigation__wrapper {
-    display: flex;
-    justify-content: space-between;
-    width: 690px;
-    margin: 0 auto;
-    height: 56px;
-  }
-
   .main-navigation__toggle {
     display: none;
   }
 }
 
-@media (min-width: @desktop-width) {
-  .main-navigation__wrapper {
-    width: 1038px;
-  }
+.main-navigation {
+  width: 284px;
+  margin: 0 auto;
 }
 
 .main-navigation__list {
   margin: 0;
   padding: 0;
-  list-style: none;
+  list-style-type: none;
+}
+
+.main-navigation__list a {
+  color: #ffffff;
+}
+
+.main-navigation__toggle {
+  margin: 0;
+  padding: 17px 0;
+  width: 23px;
+  border: none;
 }
