--- a/source/less/global/page.less
+++ b/source/less/global/page.less
@@ -14,12 +14,16 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
+  padding: 0;
   font-weight: 700;
   font-style: normal;
   text-align: center;
   line-height: 26px;
-  font-family: 'PT Sans';
-  color: #000000;
+  font-family: "PT Sans", sans-serif;
+ }
+
+p {
+  margin: 0;
  }
 
  .visually-hidden {
