--- a/source/less/blocks/index/main-page.less
+++ b/source/less/blocks/index/main-page.less
@@ -1,14 +1,17 @@
 .main-page {
   width: 100%;
+  margin: 0 auto;
+  text-align: center;
   margin-bottom: 32px;
   background-color: #000000;
-  background-image: url("/source/img/back-mobile.jpg.jpg");
-  background-size: 100% auto;
-  background-repeat: no-repeat;
 }
+
+
+@media (min-width: @tablet-width) {}
 
 .main-page__text-image {
   margin: 0 auto;
   padding: 90px 0 85px 0;
+  display: block;
 }
 
