--- a/source/less/blocks/index/subscription.less
+++ b/source/less/blocks/index/subscription.less
@@ -1,17 +1,35 @@
 .subscription {
   margin: 0 auto;
-  padding: 38px 18px 10px 18px;
+  padding-top: 38px;
+  text-align: center;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.subscription__wrapper {
-  width: 261px;
-  text-align: center;
+.subscription__title {
+  margin-bottom: 28px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  text-transform: uppercase;
+  color: #000000;
+}
+
+.subscription__description {
+  margin-bottom: 32px;
+  color: #333333;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 21px;
+  text-transform: uppercase;
 }
 
 .subscription__button {
-  width: 284px;
+  min-width: 284px;
   margin: 0 auto;
   margin-bottom: 49px;
   padding: 16px 49px;
