--- a/source/less/style.less
+++ b/source/less/style.less
@@ -11,6 +11,7 @@
 @import "./blocks/index/index-container.less";
 @import "./blocks/index/subscription.less";
 @import "./blocks/index/main-page.less";
+@import "./blocks/index/map.less";
 
 //catalog
 @import "./blocks/catalog/cards.less";
