--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -2,26 +2,28 @@
   width: 282px;
   margin: 0 auto;
   text-align: center;
-  text-transform: uppercase;
-  color: #000000;
+
+  @media (min-width: @tablet-width) {
+    width: 520px;
+  }
 }
 
 .advantages__header-title {
-  font-family: "PT Sans", sans-serif;
-  font-style: normal;
-  font-weight: 700;
   font-size: 18px;
-  line-height: 26px;
   margin-bottom: 35px;
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+  }
 }
 
 .advantages__header-description {
   color: #333333;
+  font-family: "PT Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
-  margin-bottom: 16px;
+  margin-bottom: 32px;
 }
 
 .advantages__list {
