--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -11,4 +11,17 @@
   margin-right: 6px;
 }
 
+.social__link svg {
+  fill: #81b3d2;
+  color: #ffffff;
+}
+
+.social__link svg:hover {
+  fill: #669ec0;
+}
+
+.social__link svg:active {
+  fill: #5496bd;
+  backdrop-filter: rgba(255, 255, 255, 0.3);
+}
 
