--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,23 +1,35 @@
 .main-footer__copyright {
+  padding-top: 40px;
+  padding-bottom: 29px;
+  margin: 0 auto;
+}
+
+.copyright__link {
+  text-align: center;
+  height: 34px;
+  color: #000000;
   display: flex;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
-  margin-bottom: 29px;
 }
 
 .copyright__text {
-  margin-right: 10px;
-  font-family: "PT Sans", sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 21px;
-  text-transform: uppercase;
+  padding-right: 8px;
 }
 
-.copyright__link{
-  margin: 0;
-  padding: 0;
-  height: 34px;
+.copyright__link svg {
+  fill: #000000;
+}
+
+.copyright__link:hover,
+.copyright__link svg:hover {
+  color: #81b3d2;
+  fill: #81b3d2;
+}
+
+.copyright__link:active,
+.copyright__link svg:active {
+  color: #b3b3b3;
+  fill: #b3b3b3;
 }
