--- a/source/less/blocks/index/main-page.less
+++ b/source/less/blocks/index/main-page.less
@@ -1,9 +1,24 @@
 .main-page {
   width: 100%;
   margin: 0 auto;
+  position: relative;
   text-align: center;
   margin-bottom: 32px;
   background-color: #000000;
+  background-image: url("../../../img/back-desktop.jpg");
+  background-position: 50% 30%;
+  background-repeat: no-repeat;
+}
+
+.main-page::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 57px;
+  background-image: url("../../../img/intro-triangle.svg");
+  background-repeat: no-repeat;
+  bottom: 0;
 }
 
 .main-page__text-image {
