--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,7 +1,6 @@
 .main-footer {
-  margin: 0 auto;
-  margin-top: 39px;
-  padding: 0;
+  padding: 39px 19px;
   width: 282px;
+  margin: 0 auto;
 }
 
