--- a/source/less/global/page.less
+++ b/source/less/global/page.less
@@ -7,12 +7,19 @@ body {
   font-size: 14px;
   line-height: 21px;
   font-weight: 400;
-  text-transform: uppercase;
   color: #000000;
   background-color: #ffffff;
+  text-transform: uppercase;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  vertical-align: baseline;
+  border: 0;
   margin: 0;
   padding: 0;
   font-weight: 700;
@@ -27,6 +34,8 @@ a {
 }
 
 p {
+  vertical-align: baseline;
+  border: 0;
   margin: 0;
   padding: 0;
 }
