--- a/source/less/blocks/catalog/cards.less
+++ b/source/less/blocks/catalog/cards.less
@@ -2,15 +2,33 @@
   width: auto;
 }
 
+.cards-header {
+  padding: 37px 20px 25px 20px;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    padding: 66px 0 67px 0;
+  }
+}
+
 .cards__title {
-  margin-top: 37px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 26px;
+  text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .cards__description {
   width: 280px;
   color: #333333;
   margin: 0 auto;
-  margin-top: 33px;
+  padding-top: 33px;
   text-align: center;
   font-family: "PT Sans", sans-serif;
   font-style: normal;
@@ -18,16 +36,130 @@
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
-  margin-bottom: 17px;
+
+  @media (min-width: @tablet-width) {
+    width: 458px;
+  }
+}
+
+.cards__description br {
+  @media (max-width: @mobile-width-only) {
+    display: none;
+  }
 }
 
 .cards__list {
   width: auto;
+  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 60px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  @media (min-width: @desktop-width) {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0;
+  }
+}
+
+.cards__item:first-child {
+  @media (min-width: @tablet-width) {
+    grid-column: 1/-1;
+  }
 }
 
 .cards__item {
+  width: 100%;
   padding: 24px 20px 25px 20px;
   margin: 0 auto;
   text-align: start;
+  border-top: 1px solid #e5e5e5;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+    border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+  }
 }
 
+.cards__item:last-child {
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.text-card__title {
+  text-align: left;
+  line-height: 21px;
+}
+
+.cards__image {
+  width: 100%;
+  margin-bottom: 15px;
+  display: block;
+
+  @media (min-width: @tablet-width) {
+    height: 400px;
+    object-fit: cover;
+    margin: 0 auto;
+  }
+}
+
+.text-card__author-name {
+  padding-bottom: 11px;
+  text-transform: none;
+  line-height: 21px;
+  padding-top: 1px;
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 0;
+  }
+}
+
+.cards__favorite {
+  background-color: transparent;
+  border: none;
+  padding-right: 27px;
+
+  @media (min-width: @desktop-width) {
+    color: #ffffff;
+    fill: #ffffff;
+  }
+}
+
+.cards__favorite svg {
+  fill: rgba(0, 0, 0, 0.3);
+  padding-right: 9px;
+
+  @media (min-width: @desktop-width) {
+    fill: #ffffff;
+  }
+}
+
+.review {
+  @media (min-width: @tablet-width) {
+    width: 100%;
+    background: #f2f2f2;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  @media (min-width: @desktop-width) {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.3);
+    bottom: 0;
+    color: #ffffff;
+    height: 80px;
+  }
+}
+
+.text-card {
+  @media (min-width: @tablet-width) {
+    padding-left: 21px;
+    padding-top: 22px;
+    padding-bottom: 15px;
+  }
+}
