--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,17 +1,23 @@
 .main-footer__copyright {
   padding-top: 40px;
   padding-bottom: 29px;
-  margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    padding: 0;
+  }
 }
 
 .copyright__link {
   text-align: center;
+  min-width: 121px;
+  width: 100%;
   height: 34px;
   color: #000000;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .copyright__text {
