--- a/source/less/blocks/index/main-page.less
+++ b/source/less/blocks/index/main-page.less
@@ -1,27 +1,44 @@
 .main-page {
-  width: 100%;
-  margin: 0 auto;
   position: relative;
-  text-align: center;
-  margin-bottom: 32px;
-  background-color: #000000;
-  background-image: url("../../../img/back-desktop.jpg");
-  background-position: 50% 30%;
+  margin: 0 auto;
+  background-image: url("../../../img/back-mobile-catalog.jpg"), url("../../../img/back-mobile-catalog@2x.jpg");
   background-repeat: no-repeat;
+  background-position: 50% 30%;
+  background-size: cover;
+  background-color: #000000;
+  margin-bottom: 32px;
+
+  @media (min-width: @tablet-width) {
+    background-image: url("../../../img/back-tablet-catalog.jpg"), url("../../../img/back-tablet-catalog@2x.jpg");
+  }
+
+  @media (min-width: @desktop-width) {
+    background-image: url("../../../img/back-desktop-catalog.jpg"), url("../../../img/back-desktop-catalog@2x.jpg");
+  }
 }
 
 .main-page::after {
   content: "";
   position: absolute;
   display: block;
-  width: 100%;
+  width: 1200px;
   height: 57px;
   background-image: url("../../../img/intro-triangle.svg");
   background-repeat: no-repeat;
+  background-position: center;
+  left: -440px;
   bottom: 0;
+
+  @media (min-width: @tablet-width) {
+    left: -216px;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 40px;
+  }
 }
 
-.main-page__text-image {
+.main-page img {
   margin: 0 auto;
   padding: 90px 0 85px 0;
   display: block;
