--- a/source/less/blocks/index/subscription.less
+++ b/source/less/blocks/index/subscription.less
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media (min-width: @tablet-width) {
+    padding: 58px 166px 61px 167px;
+  }
 }
 
 .subscription__title {
@@ -16,6 +20,10 @@
   line-height: 26px;
   text-transform: uppercase;
   color: #000000;
+
+  @media (min-width: @tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .subscription__description {
