--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,10 +1,15 @@
 .social__list {
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 0;
   margin: 0;
   margin-top: 33px;
   height: 48px;
+
+  @media (min-width: @tablet-width) {
+    margin: 0 auto;
+  }
 }
 
 .social__list li:not(:last-child) {
