--- a/source/less/global/page.less
+++ b/source/less/global/page.less
@@ -33,14 +33,15 @@ a {
   text-decoration: none;
 }
 
-p {
-  vertical-align: baseline;
+p,
+button {
   border: 0;
   margin: 0;
   padding: 0;
 }
 
-li {
+li,
+ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -66,6 +67,18 @@ img {
   height: auto;
 }
 
+video {
+  max-width: 100%;
+  height: auto;
+}
+
+*,
+*:after,
+*:before {
+  box-sizing: border-box;
+}
+
+
 .page {
   height: 100%;
   font-size: 14px;
@@ -76,3 +89,4 @@ img {
 .page__body {
   min-height: 100%;
 }
+
