--- a/source/less/blocks/catalog/video.less
+++ b/source/less/blocks/catalog/video.less
@@ -34,6 +34,7 @@
 .video__box {
   margin: 0 auto;
   text-align: center;
+  position: relative;
 }
 
 .video__player {
@@ -56,11 +57,11 @@
   position: absolute;
   width: 48px;
   height: 54px;
-  left: 144px;
+  left: 45%;
+  top: 30%;
   z-index: 100;
-  top: 2527px;
 
-  @media (min-width: @tablet-width) {
+ /* @media (min-width: @tablet-width) {
     left: 365px;
     top: 2255px;
   }
@@ -68,5 +69,5 @@
   @media (min-width: @desktop-width) {
     left: 585px;
     top: 1651px;
-  }
+  }*/
 }
