--- a/source/less/blocks/index/subscription.less
+++ b/source/less/blocks/index/subscription.less
@@ -34,27 +34,41 @@
   font-size: 14px;
   line-height: 21px;
   text-transform: uppercase;
+
+  @media (max-width: @mobile-width-only) {
+    br {
+      display: none;
+    }
+  }
 }
 
-.subscription__button {
-  min-width: 284px;
+.button {
+  min-width: 282px;
   margin: 0 auto;
   padding: 16px 49px;
   background-color: #81b3d2;
   color: #ffffff;
   border: none;
   text-transform: uppercase;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 21px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  text-align: center;
 }
 
-.subscription__button:hover {
+.button:hover {
   background-color: #669ec0;
 }
 
-.subscription__button:active {
+.button:active {
   background-color: #5496bd;
   color: rgba(255, 255, 255, 0.3);
 }
 
-.subscription__button:disabled {
+.button:disabled {
   background-color: #e5e5e5;
 }
