--- a/source/less/blocks/catalog/catalog-container.less
+++ b/source/less/blocks/catalog/catalog-container.less
@@ -1,19 +1,19 @@
 .container__header {
   position: relative;
   margin: 0 auto;
-  background-image: url("../../../img/back-mobile-catalog.jpg"), url("../../../img/back-mobile-catalog@2x.jpg");
+  background-image: url("../img/back-mobile-catalog.jpg"), url("../img/back-mobile-catalog@2x.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   background-color: #000000;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../../../img/back-tablet-catalog.jpg"), url("../../../img/back-tablet-catalog@2x.jpg");
-    left: -210px;
+    background-image: url("../img/back-tablet-catalog.jpg"), url("../img/back-tablet-catalog@2x.jpg");
+    left: 0;
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../../img/back-desktop-catalog.jpg"), url("../../../img/back-desktop-catalog@2x.jpg");
+    background-image: url("../img/back-desktop-catalog.jpg"), url("../img/back-desktop-catalog@2x.jpg");
     left: 0;
   }
 }
@@ -24,18 +24,18 @@
   display: block;
   width: 1200px;
   height: 57px;
-  background-image: url("../../../img/intro-triangle.svg");
+  background-image: url("../img/intro-triangle.svg");
   background-repeat: no-repeat;
   background-position: center;
   left: -440px;
   bottom: 0;
 
   @media (min-width: @tablet-width) {
-    left: -210px;
+    left: -28%;
   }
 
   @media (min-width: @desktop-width) {
-    left: 0;
+    left: 4%;
   }
 }
 
