--- a/source/less/blocks/index/main-page.less
+++ b/source/less/blocks/index/main-page.less
@@ -1,7 +1,7 @@
 .main-page {
   position: relative;
   margin: 0 auto;
-  background-image: url("../../../img/back-mobile-catalog.jpg"), url("../../../img/back-mobile-catalog@2x.jpg");
+  background-image: url("../img/back-mobile-catalog.jpg"), url("../img/back-mobile-catalog@2x.jpg");
   background-repeat: no-repeat;
   background-position: 50% 30%;
   background-size: cover;
@@ -9,11 +9,11 @@
   margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../../../img/back-tablet-catalog.jpg"), url("../../../img/back-tablet-catalog@2x.jpg");
+    background-image: url("../img/back-tablet-catalog.jpg"), url("../img/back-tablet-catalog@2x.jpg");
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../../../img/back-desktop-catalog.jpg"), url("../../../img/back-desktop-catalog@2x.jpg");
+    background-image: url("../img/back-desktop-catalog.jpg"), url("../img/back-desktop-catalog@2x.jpg");
   }
 }
 
@@ -23,18 +23,18 @@
   display: block;
   width: 1200px;
   height: 57px;
-  background-image: url("../../../img/intro-triangle.svg");
+  background-image: url("../img/intro-triangle.svg");
   background-repeat: no-repeat;
   background-position: center;
   left: -440px;
   bottom: 0;
 
   @media (min-width: @tablet-width) {
-    left: -216px;
+    left: -28%;
   }
 
   @media (min-width: @desktop-width) {
-    left: 40px;
+    left: 0;
   }
 }
 
