--- a/source/less/blocks/index/map.less
+++ b/source/less/blocks/index/map.less
@@ -10,6 +10,7 @@
   object-fit: cover;
   height: 350px;
   margin: 0 auto;
+  width: 100%;
 }
 
 .map__button {
@@ -20,15 +21,6 @@
   position: absolute;
   margin: 0;
   padding: 0;
-  left: 129px;
-  top: 141px;
-
-  @media (min-width: @tablet-width) {
-    left: 370px;
-  }
-
-  @media (min-width: @desktop-width) {
-    left: 626px;
-  }
+  top: 46%;
 }
 
