--- a/source/less/blocks/catalog/video.less
+++ b/source/less/blocks/catalog/video.less
@@ -41,6 +41,7 @@
   padding: 0 20px;
   margin: 0 auto;
   position: relative;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     padding: 0 60px;
@@ -58,16 +59,11 @@
   width: 48px;
   height: 54px;
   left: 45%;
-  top: 30%;
+  top: 35%;
   z-index: 100;
 
- /* @media (min-width: @tablet-width) {
-    left: 365px;
-    top: 2255px;
+  @media (min-width: @tablet-width) {
+    left: 48%;
+    top: 45%;
   }
-
-  @media (min-width: @desktop-width) {
-    left: 585px;
-    top: 1651px;
-  }*/
 }
