--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,9 +19,11 @@
 @import "./blocks/catalog/video.less";
 
 //form
-@import "./blocks/form/form-container.less";
 @import "./blocks/form/form.less";
 @import "./blocks/form/reviews.less";
+@import "./blocks/form/control.less";
+@import "./blocks/form/modal.less";
+
 
 //global
 @import "./global/fonts.less";
