--- a/source/less/blocks/catalog/catalog-container.less
+++ b/source/less/blocks/catalog/catalog-container.less
@@ -14,7 +14,6 @@
 
   @media (min-width: @desktop-width) {
     background-image: url("../img/back-desktop-catalog.jpg"), url("../img/back-desktop-catalog@2x.jpg");
-    left: 0;
   }
 }
 
@@ -44,14 +43,15 @@
   padding-top: 52px;
   padding-bottom: 67px;
   display: block;
+  width: auto;
 
   @media (min-width: @tablet-width) {
     padding-top: 95px;
-    padding-bottom: 60px;
+    padding-bottom: 117px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-top: 103px;
+    padding-top: 101px;
     padding-bottom: 120px;
   }
 }
