--- a/source/less/global/page.less
+++ b/source/less/global/page.less
@@ -73,8 +73,8 @@ video {
 }
 
 *,
-*:after,
-*:before {
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -88,5 +88,6 @@ video {
 
 .page__body {
   min-height: 100%;
+  position: relative;
 }
 
