--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -22,6 +22,7 @@
     grid-template-areas: "ali bli . cli dli";
     text-align: center;
   }
+
   @media (min-width: @desktop-width) {
     grid-template-columns: repeat(5, 240px);
   }
@@ -40,14 +41,14 @@
   border-bottom: 1px solid rgba(1, 1, 1, 0.2);
   border-top: 1px solid rgba(255, 255, 255, 0.2);
   text-align: center;
-  background-color: #81B3D2;
+  background-color: #81b3d2;
   width: 100%;
 
   @media (min-width: @tablet-width) {
     padding-top: 18px;
     padding-bottom: 17px;
     background: none;
-    color: #000;
+    color: #000000;
     border: none;
     font-style: normal;
     font-weight: 700;
@@ -63,16 +64,16 @@
 }
 
 .site-list__item a:hover {
-  background-color: #669EC0;
+  background-color: #669ec0;
 
   @media (min-width: @tablet-width) {
-    color: #81B3D2;
+    color: #81b3d2;
     background: none;
   }
 }
 
 .site-list__item a:active {
-  background: #5496BD;
+  background: #5496bd;
   color: rgba(255, 255, 255, 0.3);
 
   @media (min-width: @tablet-width) {
@@ -80,5 +81,3 @@
     background: none;
   }
 }
-
-
