--- a/source/less/blocks/form/form.less
+++ b/source/less/blocks/form/form.less
@@ -71,13 +71,18 @@
   }
 }
 
-@media (min-width: @tablet-width) {
-  .form--checked .form__checked {
+.form--checked .form__checked {
+  @media (min-width: @tablet-width) {
     width: 480px;
     padding: 30px 0 0 0;
     margin: 0 auto;
     justify-content: space-around;
   }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+  }
+}
 
   .form__checked .form__item--control {
     width: 224px;
