всё до 8 главы сделано

--- a/source/less/blocks/catalog/catalog-container.less
+++ b/source/less/blocks/catalog/catalog-container.less
@@ -6,6 +6,8 @@
   background-position: center;
   background-size: cover;
   background-color: #000000;
+  max-width: 1200px;
+  width: 100%;
 
   @media (min-width: @tablet-width) {
     background-image: url("../img/back-tablet-catalog.jpg"), url("../img/back-tablet-catalog@2x.jpg");
@@ -34,7 +36,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    left: 4%;
+    left: 0;
   }
 }
 
