--- a/source/less/blocks/main-footer.less
+++ b/source/less/blocks/main-footer.less
@@ -1,26 +1,22 @@
-.main-footer {
+.main-footer__wrapper {
   padding: 39px 19px;
-  max-width: 1240px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
+  text-align: center;
 
-  @media (min-width: @tablet-width) {
-    padding: 0;
-  }
-}
-
-.main-footer__wrapper {
   @media (min-width: @tablet-width) {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0 auto;
     text-align: center;
-    padding: 36px 44px;
+    height: 120px;
+    padding: 0 60px 0 45px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 51px 120px 51px 104px;
+    padding: 0 120px 0 104px;
   }
 }
 
