--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -26,7 +26,12 @@
 }
 
 .social__link svg:active {
-  fill: #5496bd;
-  backdrop-filter: rgba(255, 255, 255, 0.3);
+  fill: rgb(84, 150, 189);
+  color: rgba(255, 255, 255, 0.3);
+}
+
+.bird {
+  fill: #ffffff;
+  z-index: 2;
 }
 
