--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -9,33 +9,23 @@
 
 .copyright__link {
   text-align: center;
-  min-width: 121px;
-  width: 100%;
-  height: 34px;
+  font-size: 14px;
+  font-family: "PT Sans", sans-serif;
   color: #000000;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  vertical-align: middle;
   cursor: pointer;
-}
-
-.copyright__text {
-  padding-right: 8px;
+  transition: color 0.1s linear;
 }
 
 .copyright__link svg {
-  fill: #000000;
+  padding-left: 8px;
+  vertical-align: middle;
 }
 
-.copyright__link:hover,
-.copyright__link svg:hover {
+.copyright__link:hover {
   color: #81b3d2;
-  fill: #81b3d2;
 }
 
-.copyright__link:active,
-.copyright__link svg:active {
+.copyright__link:active {
   color: #b3b3b3;
-  fill: #b3b3b3;
 }
