--- a/source/less/blocks/form/modal.less
+++ b/source/less/blocks/form/modal.less
@@ -2,9 +2,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 0;
-  left: 0;
-  display: flex;
+  z-index: 1000;
   background-color: rgba(0, 0, 0, 0.3);
 }
 
@@ -13,20 +11,28 @@
 }
 
 .modal-auth {
-  min-width: 320px;
-  width: 100%;
-  bottom: -677px;
+  position: absolute;
+  top: 33%;
+  left: 0;
+  text-align: center;
   background-color: #ffffff;
   color: #000000;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
 
   @media (min-width: @tablet-width) {
     max-width: 400px;
+    left: 19%;
+  }
+
+  @media (min-width: @desktop-width) {
+    left: 33%;
   }
 }
 
 .modal-auth--two {
-  bottom: -348px;
+  .button {
+    margin: 0;
+  }
 
   @media (min-width: @tablet-width) {
     max-width: 640px;
@@ -35,12 +41,13 @@
 
 .modal-content {
   position: relative;
-  margin: 0 auto;
   padding: 45px 42px 28px 41px;
   background-color: #ffffff;
+  width: 320px;
 
   @media (min-width: @tablet-width) {
     padding: 50px 47px 50px 46px;
+    width: 100%;
   }
 }
 
@@ -101,8 +108,11 @@
   border: 20px solid #f2f2f2;
 
   @media (min-width: @tablet-width) {
+    width: 640px;
     border: 44px solid #f2f2f2;
     border-right-width: 91px;
     border-left-width: 91px;
+    padding-left: 139px;
+    padding-right: 140px;
   }
 }
