--- a/source/less/blocks/form/reviews.less
+++ b/source/less/blocks/form/reviews.less
@@ -42,11 +42,12 @@
   @media (min-width: @tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 60px;
     margin: 0 auto;
+    padding: 0 60px;
   }
 
   @media (min-width: @desktop-width) {
-    padding: 0 120px;
+    max-width: 960px;
+    padding: 0;
   }
 }
