--- a/source/less/blocks/index/advantages.less
+++ b/source/less/blocks/index/advantages.less
@@ -123,6 +123,14 @@
 
 .advantages__item--canyon .card {
   padding: 24px 18px;
+
+  @media (min-width: @tablet-width) {
+    padding: 38px 34px 54px 33px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 43px 43px 60px 42px;
+  }
 }
 
 .advantages__item:nth-child(4n+1) {
@@ -197,6 +205,10 @@
     align-items: center;
     padding: 60px 31px 59px 36px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding: 58px 58px 75px 52px;
+  }
 }
 
 .advantages__image {
@@ -226,8 +238,8 @@
   padding-top: 30px;
 
   @media (min-width: @tablet-width) {
-    padding-top: 26px;
-    padding-bottom: 30px;
+    padding-top: 28px;
+    padding-bottom: 28px;
   }
 }
 
@@ -268,4 +280,3 @@
     }
   }
 }
-
